<resources>
    <string name="app_name">StudiumPlan</string>
    <string name="event_title">Title</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_coefficient">Coefficient</string>
    <string name="add_event">Add Event</string>
    <string name="save_event">Save Event</string>
    <string-array name="sort_options">
        <item>Sort by date</item>
        <item>Sort by coefficient</item>
        <item>Sort by type</item>
        <item>Sort by subject</item>
    </string-array>
    <string-array name="types">
        <item>Examen</item>
        <item>Oral</item>
        <item>TP Noté</item>
        <item>Test</item>
        <item>Autre</item>
    </string-array>
</resources>