<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_date"
            android:focusable="false" />

        <EditText
            android:id="@+id/timeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_time"
            android:focusable="false" />

        <EditText
            android:id="@+id/coeffEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_coefficient"
            android:inputType="number" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type "
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/subjectTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Subject "
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/subjectSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/saveEventButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_event" />

    </LinearLayout>
</ScrollView>